--- a/frontend/start-page/styles.css
+++ b/frontend/start-page/styles.css
@@ -1,4 +1,5 @@
 body {
+    background-image: url(pics/background.webp);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,30 +11,49 @@ h1 {
     text-align: center;
     margin-top: 100px;
     font-size: 75px;
+    color:#FFFFF4
 }
 
-#start {
+#start, #settings, #exit {
     font-size: 30px;
-    padding: 10px;
     width: 200px;
     height: 75px;
     border-radius: 25px;
     border-width: 5px;
     cursor: pointer;
     border-color: black;
+    margin-top: 15px;
+    background-color: #FFFFF0;
 }
 
-#start:hover{
+#start:hover, #settings:hover, #exit:hover{
     background-color: lightgray;
 }
 
-.readtext {
+.storytext {
     font-size: 50px;
+    color:#FFFFF4
 }
 
 .buton {
-    width: 150px;
-    height: 50px;
+    font-size: 30px;
+    width: 200px;
+    height: 75px;
+    border-radius: 25px;
+    border-width: 5px;
+    cursor: pointer;
+    border-color: black;
+    margin-top: 15px;
+    background-color: #FFFFF0;
+}
+
+.buton:hover {
+    background-color: lightgray;
+}
+
+#story {
+    width: 1050px;
+    line-height: 25px;
     font-size: 20px;
-    
+    color: #FFFFF4;
 }
