--- a/frontend/start-page/styles.css
+++ b/frontend/start-page/styles.css
@@ -51,9 +51,7 @@ h1 {
     background-color: lightgray;
 }
 
-#story {
-    width: 1050px;
-    line-height: 25px;
-    font-size: 20px;
+h3 {
+    font-size: 50px;
     color: #FFFFF4;
 }
