--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,30 +1,41 @@
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #f0f0f0;
-    color: #333;
+    background-image: url(pics/background.webp);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: "Roboto", sans-serif
 }
 
 h1 {
-    margin-top: 20px;
-    font-size: 36px;
+    text-align: center;
+    margin-top: 100px;
+    font-size: 75px;
+    color:#FFFFF4
+}
+
+.storytext {
+    font-size: 50px;
+    color:#FFFFF4
 }
 
 button {
-    margin: 15px;
-    padding: 15px 30px;
-    font-size: 18px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 10px;
+    font-size: 30px;
+    width: 200px;
+    height: 75px;
+    border-radius: 25px;
+    border-width: 5px;
     cursor: pointer;
+    border-color: black;
+    margin-top: 15px;
+    background-color: #FFFFF0;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: lightgray;
 }
 
-#main-menu, #game-screen {
-    margin-top: 50px;
+h3 {
+    font-size: 50px;
+    color: #FFFFF4;
 }
