--- a/frontend/map/map.css
+++ b/frontend/map/map.css
@@ -177,10 +177,27 @@ nav {
     color: white;
 }
 
-.combat-controls {
-    display: flex;
-    justify-content: space-around;
-    margin: 20px 0;
+.combat-controls button {
+    background-color: #2e5232; 
+    color: white; 
+    font-family: Arial, sans-serif;
+    padding: 10px 20px; 
+    border: 2px solid #122413; 
+    border-radius: 10px; 
+    cursor: pointer; 
+    font-size: 16px; 
+    text-transform: uppercase; 
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.combat-controls button:hover {
+    background-color: #476747; 
+    transform: scale(1.05); 
+}
+
+.combat-controls button:active {
+    background-color: #1a2a1d; 
+    transform: scale(0.95); 
 }
 
 .combat-log {
